// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render selectExpensesTotal with 1 expenses 1`] = `
<selectExpensesTotal
  expenses={
    Object {
      "amount": 4500,
      "createdAt": 345600000,
      "description": "Credit Card",
      "id": "3",
      "note": "",
    }
  }
/>
`;

exports[`should render selectExpensesTotal with 3 expense 1`] = `
<selectExpensesTotal
  expenses={
    Array [
      Object {
        "amount": 195,
        "createdAt": 0,
        "description": "Gum",
        "id": "1",
        "note": "",
      },
      Object {
        "amount": 109500,
        "createdAt": -345600000,
        "description": "Rent",
        "id": "2",
        "note": "",
      },
      Object {
        "amount": 4500,
        "createdAt": 345600000,
        "description": "Credit Card",
        "id": "3",
        "note": "",
      },
    ]
  }
/>
`;
